--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,26 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
+    <div class="container">
+      <%= link_to "Habit", root_path, class:"navbar-brand fw-bold" %>
+      <div class="ms-auto">
+        <% if user_signed_in? %>
+          <%= link_to "Home", root_path, class:"btn btn-link" %>
+          <%= link_to "Goals", goals_path, class:"btn btn-link" %>
+          <%= link_to "Profile", class:"btn btn-link" %>
+        <% else %>
+          <%= link_to "ログイン", new_user_session_path, class:"btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </nav>
+  <% if notice %><div class="alert alert-success m-0"><%= notice %></div><% end %>
+  <% if alert  %><div class="alert alert-danger  m-0"><%= alert  %></div><% end %>
     <%= yield %>
   </body>
 </html>
