--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,12 @@
-home
+<div class="card-header bg-white">最終目標</div>
+  <div class="card-body">
+    <h5 class="mb-2">title</h5>
+    <div class="text-muted xsmall mb-2">
+      期間:
+    </div>
+    <p class="text-muted xsmall"></p>
+
+    <div class="progress"><div class="progress-bar bg-success" ></div></div>
+  </div>
+</div
+>
