--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         <% if user_signed_in? %>
           <%= link_to "Home", root_path, class:"btn btn-link" %>
           <%= link_to "Goals", goals_path, class:"btn btn-link" %>
-          <%= link_to "Profile", class:"btn btn-link" %>
+          <%= link_to "Profile", profile_path(current_user), class:"btn btn-link" %>
         <% else %>
           <%= link_to "ログイン", new_user_session_path, class:"btn btn-primary" %>
         <% end %>
