--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -57,6 +57,7 @@
               <td class="text-end">
                 <%= link_to "HOMEで表示",root_path(g,goal_id: g.id), class:"btn btn-outline-primary btn-sm" %>
                 <%= link_to "Goal詳細", goal_path(g, goal_id: g.id), class:"btn btn-outline-secondary btn-sm ms-1" %>
+                <%= button_to "削除", goal_path(g),method: :delete,form: { data: { turbo_confirm: "本当に削除しますか？（タスクも消えます）" } },class: "btn btn-outline-danger btn-sm ms-1" %>
               </td>
             </tr>
           <% end %>
