--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,40 +1,14 @@
 <div class="container my-4">
   <div class="d-flex align-items-center gap-3 mb-3">
-    <span class="avatar d-inline-grid place-items-center rounded-circle bg-dark text-white fw-bold"
-          style="width:34px;height:34px;display:inline-grid;place-items:center;">
+    <span class="avatar d-inline-grid place-items-center rounded-circle bg-dark text-white fw-bold" style="width:34px;height:34px;display:inline-grid;place-items:center;">
       <%= @user.email.first&.upcase || "U" %>
     </span>
     <div>
       <div class="h4 mb-1 fw-bold"><%= @user.email %></div>
     </div>
   </div>
-    <div class="card shadow-sm mb-4">
-      <div class="card-header bg-white">代表目標の編集</div>
-      <div class="card-body">
-        <%= form_with model: @goal, url: profile_path(@user), method: :put do |f| %>
-          <div class="mb-2">
-            <%= f.label :title, "タイトル" %>
-            <%= f.text_field :title, class:"form-control", placeholder:"例：TOEIC 700" %>
-          </div>
-          <div class="row g-2">
-            <div class="col">
-              <%= f.label :start_date, "開始日" %>
-              <%= f.date_field :start_date, class:"form-control" %>
-            </div>
-            <div class="col-6 col-md-4">
-              <%= f.label :target_date, "目的日" %>
-              <%= f.date_field :target_date, class:"form-control", required: true %>
-            </div>
-          </div>
-          <div class="mb-3 mt-2">
-            <%= f.label :description, "説明" %>
-            <%= f.text_area :description, class:"form-control", placeholder:"目標の背景や計画をメモ" %>
-          </div>
-          <%= f.submit "保存", class:"btn btn-primary" %>
-        <% end %>
-      </div>
-    </div>
     <div class="card shadow-sm">
+      <%= link_to "GOAL作成", new_goal_path, class:"btn btn-success btn-sm" %>
     <div class="card-header bg-white">あなたの目標一覧</div>
     <div class="card-body p-0">
       <table class="table table-hover mb-0">
