--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
-    <div class="container">
+    <div class="container py-3">
       <%= link_to "Habit", root_path, class:"navbar-brand fw-bold" %>
       <div class="ms-auto">
         <% if user_signed_in? %>
